--- a/_posts/2014-03-17-wnlee.md
+++ b/_posts/2014-03-17-wnlee.md
@@ -5,8 +5,7 @@ category: Life
 excerpt: 'WNLee's Blog，Write down every little incident in my life.'
 ---
 
-WNLee's Blog
-========
+【WNLee 博客介绍】
 
 ## 摘要
 
