--- a/_posts/2014-03-17-wnlee.md
+++ b/_posts/2014-03-17-wnlee.md
@@ -2,7 +2,7 @@
 layout: post
 title: WNLee 博客介绍
 category: Life
-excerpt: 'WNLee's Blog，Write down every little incident in my life.'
+excerpt: "WNLee's Blog，Write down every little incident in my life."
 ---
 
 【WNLee 博客介绍】
