--- a/_posts/2014-03-17-wnlee.md
+++ b/_posts/2014-03-17-wnlee.md
@@ -2,7 +2,7 @@
 layout: post
 title: WNLee 博客介绍
 category: Life
-excerpt: "WNLee's Blog，Write down every little incident in my life."
+excerpt: "学习一样东西之后就会用它做一些作品出来，这个页面的诞生主要是为了实践 BackBoneJs，在使用了 BackBoneJs 之后发现他的 MVC 对代码的可读性和健壮性有很大的帮助，页面开发变得更加方便。"
 ---
 
 【WNLee 博客介绍】
