--- a/_posts/2014-03-19-C语言编程设计流程心得.md
+++ b/_posts/2014-03-19-C语言编程设计流程心得.md
@@ -16,13 +16,7 @@ excerpt: " 很少用 C语言 写东西，但是代码这东西是需要一定的
 - 摘要
 - 目录
 - 撰文缘由
-- 程序要求
-- 知识储备
-- 程序构思
-- 程序框图
-- 准备工作
-- 编写程序
-- 测试和优化
+- 开发流程
 - 总结
 
 ## 撰文缘由
@@ -34,7 +28,9 @@ excerpt: " 很少用 C语言 写东西，但是代码这东西是需要一定的
 
 4. 这才是真正的原因，哈哈，上面纯属吐槽！我只是想写下自己写一个 C 语言程序的流程，哪天不小心迷茫了，看一下，就知道要怎么写 C语言小程序了。
 
-## 程序要求
+## 开发流程
+
+##### 【第一步】程序要求
 
 比如我的作用是做一个单道处理系统的作业等待模拟程序，要求如下：
 
@@ -43,14 +39,16 @@ excerpt: " 很少用 C语言 写东西，但是代码这东西是需要一定的
 3. 控制块统一命名 JCB，大概需要包含的信息(可以用来设计结构体)；
 4. 模拟过程中需要输出 周转时间、带权周转时间、平均周转时间和平均带权周转时间；
 
-## 知识储备
+
+##### 【第二步】知识储备
 
 - 至少要知道什么是 FCFS 和 HRN 算法吧！
 - 响应比(Rp) = （等待时间+要求服务时间）/（要求服务时间）；
 - 周转时间 = 完成时间 - 到达时间 = 等待时间 + 服务时间；
 - 带权周转时间 = 周转时间/服务时间；
 
-## 程序构思
+
+##### 【第三步】程序构思
 
 - 选择要测试的调度算法的类型，选择后对应进行测试
 - 程序需要数据，所以需要用户输入的过程
@@ -64,11 +62,13 @@ excerpt: " 很少用 C语言 写东西，但是代码这东西是需要一定的
 - 所有进程完成后需要计算结果
 - 结果得出后需要输出
 
-## 程序框图
+
+##### 【第四步】程序框图
 
 ![程序框图]({{ site.baseurl }}/images/c.jpg)
 
-## 准备工作
+
+##### 【第五步】准备工作
 
 1. 选择需要的预编译头文件；
 2. 选择数据结构，还有相关操作，这里我选择链表；
@@ -78,13 +78,15 @@ excerpt: " 很少用 C语言 写东西，但是代码这东西是需要一定的
 
 大概就是这些，缺的欢迎补充......
 
-## 编写程序
+
+##### 【第六步】编写程序
 
 这个怎么写呢？！每个人都有自己的编程习惯，编译器也有不同。但是，大部分人都会按模块来写吧！我个人比较喜欢先写输入输出，数据结构这两块。写输入输出再来添加逻辑模块方便调试，数据结果模块比较固定，而且是其他模块的依赖。
 
 这一部分就略过，以后有心得再补充。。。
 
-## 测试和优化
+
+##### 【第七步】测试和优化
 
 【测试】也可以叫做 debugger 吧？多输入几组数据来看有木有 BUG！
 
