--- a/_posts/2014-03-17-wnlee.md
+++ b/_posts/2014-03-17-wnlee.md
@@ -2,7 +2,7 @@
 layout: post
 title: WNLee 博客介绍
 category: Life
-excerpt: "学习一样东西之后就会用它做一些作品出来，这个页面的诞生主要是为了实践 BackBoneJs..."
+excerpt: 学习一样东西之后就会用它做一些作品出来，这个页面的诞生主要是为了实践 BackBoneJs...
 ---
 
 【WNLee 博客介绍】
