--- a/_posts/2014-03-19-C语言编程设计流程心得.md
+++ b/_posts/2014-03-19-C语言编程设计流程心得.md
@@ -2,7 +2,7 @@
 layout: post
 title: C 语言编程流程心得
 category: c 渣渣
-excerpt: " 很少用 C语言 写东西，但是代码这东西是需要一定的代码量来修炼的，一步一个脚印，练得多代码..."
+excerpt: 很少用 C语言 写东西，但是代码这东西是需要一定的代码量来修炼的，一步一个脚印，练得多代码...
 ---
 
 【C 语言编程流程心得】
