--- a/_posts/2014-05-18-gluten.md
+++ b/_posts/2014-05-18-gluten.md
@@ -9,7 +9,7 @@ excerpt: 面试总结，希望可以传递出有价值的信息。
 
 ## 摘要
 
-> 面试总结，希望可以传递出有价值的信息。 
+> 面试总结，希望可以传递出有价值的信息。 [slibes](http://github.wnlee.com/cache/)
 
 ## 目录
 
